# spb2xml24

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: FORMAT.md
src/: cli.rs  error.rs  format.rs  guid.rs  lib.rs  locate.rs  main.rs  propdefs.rs  reader.rs  spb.rs  textdecode.rs  xml.rs
tests/: integration.rs
tools/: extract_textdecode.py
