[package]
name = "spb2xml24"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Decompile Microsoft Flight Simulator 2024 compiled SPB property files back to readable XML."
license = "MIT"
readme = "README.md"
repository = "https://github.com/vectorial287/spb2xml24"
keywords = ["msfs", "flight-simulator", "spb", "decompiler", "xml"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "spb2xml24"
path = "src/main.rs"

[lib]
name = "spb2xml24"
path = "src/lib.rs"

[profile.release]
lto = true
strip = true
opt-level = 3
